--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -57,7 +57,7 @@
 }
 
 .header-margin{
-  margin: 2%;
+  margin-right: 15px;
 }
 
 @media (max-width: 767px)  {
